sumo/tests/dfrouter/errors/detector_files/broken_detectors_file1c/errors.dfrouter
Error: Attribute 'pos' in definition of detectorDefinition 'MQ11Fs1' is not of type float.
Quitting (on error).
